# EDU-SoftRayTracing

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: BVH.hpp.D22D6652509E7803.idx  aabb.hpp.B99BCD1909FF6C39.idx  camera.hpp.22443285070E1E97.idx  color.hpp.27B1843AF4BCCF2F.idx  hittable.hpp.C308D7FADBEB8500.idx  hittable_list.hpp.AA0CA5949E94D3EE.idx  interval.hpp.EC617C3F0B7443BB.idx  main.cpp.7840F1850E62665D.idx  material.hpp.D2A4554E37496FB2.idx  ray.hpp.5ABDE4BAD94D4550.idx  rtweekend.hpp.7E0C2256E61C3EE2.idx  sphere.hpp.054824752726E7DE.idx  stb_image_write.h.A29B145D8F5FE8B6.idx  texture.hpp.9EB382D6A3E661C0.idx  vec3.hpp.8FF68C72C60BF564.idx
include/rtweekend/: BVH.hpp  aabb.hpp  camera.hpp  color.hpp  constant_medium.hpp  hittable.hpp  hittable_list.hpp  interval.hpp  material.hpp  onb.hpp  pdf.hpp  perlin.hpp  quad.hpp  ray.hpp  rtw_image.hpp  rtweekend.hpp  sphere.hpp  texture.hpp  transform.hpp  vec3.hpp
src/: main.cpp
